# SEC-Analyzer

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: live-healthcheck.yml  publish.yml  tests.yml  workflow.yml
docs/: DECISIONS.md  IA.md  PRD.md  benchmark-model-selection.md
src/sec_analyzer/: __init__.py  cli.py  engine.py
src/sec_analyzer/presets/: __init__.py  supply_chain.py
tests/: benchmark.py  test_engine_llm.py  test_engine_xbrl.py  test_live_healthcheck.py
tests/results/: comparison_summary.json  consistency_stats.json  nvda_run1.json  nvda_run2.json  nvda_run3.json  report.json  xbrl_availability.json
tests/results/comparison/: AAPL_comparison.json  ASML_comparison.json  CAT_comparison.json  CRWD_comparison.json  F_comparison.json  JPM_comparison.json  NVDA_comparison.json  PLTR_comparison.json  SMCI_comparison.json  TSM_comparison.json
tests/results/consistency/: AAPL_run1.json  AAPL_run2.json  AAPL_run3.json  ASML_run1.json  ASML_run2.json  ASML_run3.json  CAT_run1.json  CAT_run2.json  CAT_run3.json  CRWD_run1.json  CRWD_run2.json  CRWD_run3.json  F_run1.json  F_run2.json  F_run3.json  JPM_run1.json  JPM_run2.json  JPM_run3.json  NVDA_run1.json  NVDA_run2.json  NVDA_run3.json  PLTR_run1.json  PLTR_run2.json  PLTR_run3.json  SMCI_run1.json  SMCI_run2.json  SMCI_run3.json  TSM_run1.json  TSM_run2.json  TSM_run3.json
tests/results/xbrl/: AAPL_xbrl.json  ASML_xbrl.json  CAT_xbrl.json  CRWD_xbrl.json  F_xbrl.json  JPM_xbrl.json  NVDA_xbrl.json  PLTR_xbrl.json  SMCI_xbrl.json  TSM_xbrl.json
