[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-analyzer"
version = "0.1.0"
description = "Extract structured data from SEC filings using LLM + Pydantic presets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Seongjin" }]
keywords = ["sec", "edgar", "llm", "pydantic", "structured-data", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "edgartools>=3.0",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
sec-analyzer = "sec_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/tjdwls101010/SEC-Analyzer"
