[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sec-analyzer"
dynamic = ["version"]
description = "Extract structured data from SEC filings using LLM + Pydantic presets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Seongjin" }]
keywords = ["sec", "edgar", "llm", "pydantic", "structured-data", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "edgartools>=5,<6",
    "openai>=2,<3",
    "pandas>=2,<4",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
]

[project.scripts]
sec-analyzer = "sec_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/tjdwls101010/SEC-Analyzer"

[tool.hatch.version]
source = "vcs"
